# ShortLab

./: .env.example  .gitignore  .mise.toml  AGENTS.md  Brewfile  Makefile  README.md  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml  versions.env
.ai/: bootstrap.md  conventional-commits.md  db-plan.md  dsl-format.md  dsl-v1.md  flow.md  godot-gdscript-contract.md  godot-gdscript-guidelines.md  ideas.md  llm-dsl-compiler-plan.md  prd.md  tech-stack.md
api/: main.py
db/: models.py  session.py
docs/: module-deps.md
dsl/: __init__.py  schema.py  validate.py
embeddings/: __init__.py  service.py  similarity.py
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
idea_gate/: __init__.py  core.py
ideas/: __init__.py  capability.py  compiler.py  generator.py  godot_compiler.py  openai_provider.py  parser.py  prompting.py
llm/: __init__.py  codex_cli.py  mediator.py
migrations/: env.py  script.py.mako
pipeline/: jobs.py  queue.py
renderer/: __init__.py  render.py
scripts/: cleanup-jobs.py  cleanup-rq-failed.py  db-reset.sh  dsl-gap-status.py  enqueue.py  generate-golden.py  godot-run.py  godot-verify-cli.sh  idea-compile-dsl.py  idea-compile-gdscript.py  idea-gate.py  idea-generate.py  idea-verify-capability.py  init-frontend.sh  install-godot.sh  install-pycairo-arm.sh  job-status.py  llm-mediator-retention.py  metrics-daily.py  metrics-pull-run.py  publish-record.py  purge-failed-jobs.py  qc-decide.py  render-dsl.py  rerun.py  run-dev.sh  setup-macos.sh  stop-dev.sh  test-idea-compiler-pipeline-e2e.sh  verify-env.sh  (+2 more)
(+36 files in other folders)
