[project]
name = "shortlab"
version = "0.0.0"
description = "Local deterministic pipeline for AI-generated Shorts"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
